Added OCIF8 image format support & fixed HEX editor app

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -182,13 +182,6 @@
 		"Applications/Settings.app/Localizations/Italian.lang",
 		"Applications/Settings.app/Localizations/Japanese.lang",
 		"Applications/Settings.app/Localizations/Dutch.lang",
-		-- Calendar
-		{ path="Applications/Calendar.app/Main.lua", shortcut = true },
-		"Applications/Calendar.app/Icon.pic",
-		"Applications/Calendar.app/Icons/ArrowLeft.pic",
-		"Applications/Calendar.app/Icons/ArrowRight.pic",
-		"Applications/Calendar.app/Localizations/English.lang",
-		"Applications/Calendar.app/Localizations/Russian.lang",
 		-- 3D Print
 		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
 		"Applications/3D Print.app/Icon.pic",
@@ -250,8 +243,8 @@
 		{ path="Applications/Graph.app/Main.lua", id=238, shortcut = true },
 		"Applications/Graph.app/Icon.pic",
 		-- HEX
-		{ path="Applications/HEX.app/Main.lua", id=248, shortcut = true },
-		"Applications/HEX.app/Icon.pic",
+		{ path="Applications/HEX Editor.app/Main.lua", id=248, shortcut = true },
+		"Applications/HEX Editor.app/Icon.pic",
 		-- Running string
 		{ path="Applications/Running String.app/Main.lua", id=410, shortcut = true },
 		"Applications/Running String.app/Icon.pic",
@@ -291,6 +284,13 @@
 		"Applications/VK.app/Styles/Default.lua",
 		"Applications/VK.app/Styles/Bright.lua",
 		"Applications/VK.app/Styles/Dark.lua",
+		-- Calendar
+		{ path="Applications/Calendar.app/Main.lua", shortcut = true },
+		"Applications/Calendar.app/Icon.pic",
+		"Applications/Calendar.app/Icons/ArrowLeft.pic",
+		"Applications/Calendar.app/Icons/ArrowRight.pic",
+		"Applications/Calendar.app/Localizations/English.lang",
+		"Applications/Calendar.app/Localizations/Russian.lang",
 	},
 	wallpapers = {
 		"Pictures/AhsokaTano.pic",
