Added OCIF8 image format support & fixed HEX editor app

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -243,8 +243,8 @@
 		{ path="Applications/Graph.app/Main.lua", id=238, shortcut = true },
 		"Applications/Graph.app/Icon.pic",
 		-- HEX
-		{ path="Applications/HEX Editor.app/Main.lua", id=248, shortcut = true },
-		"Applications/HEX Editor.app/Icon.pic",
+		{ path="Applications/HEX.app/Main.lua", id=248, shortcut = true },
+		"Applications/HEX.app/Icon.pic",
 		-- Running string
 		{ path="Applications/Running String.app/Main.lua", id=410, shortcut = true },
 		"Applications/Running String.app/Icon.pic",
