--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -30,6 +30,7 @@
 		"Localizations/Finnish.lang",
 		"Localizations/Dutch.lang",
 		"Localizations/Ukrainian.lang",
+		"Localizations/Belarusian.lang",
 		"Localizations/Bulgarian.lang",
 		"Localizations/Slovak.lang",
 		"Localizations/Japanese.lang",
