Ебучий опенсурс! Любой PR ломает дефолтный софт в овер 999999к% случаев

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -231,6 +231,8 @@
 		"Applications/Weather.app/Foggy.pic",
 		"Applications/Weather.app/Snowy.pic",
 		"Applications/Weather.app/Stormy.pic",
+		"Applications/Weather.app/Localizations/English.lang",
+		"Applications/Weather.app/Localizations/Russian.lang",
 		-- Calculator
 		{ path="Applications/Calculator.app/Main.lua", id=1045, shortcut = true },
 		"Applications/Calculator.app/Icon.pic",
