Добавил фичу скрытия иконок приложений в маркете

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -98,6 +98,7 @@
 		"Applications/App Market.app/Icons/Lua.pic",
 		"Applications/App Market.app/Icons/Script.pic",
 		"Applications/App Market.app/Icons/FileNotExists.pic",
+		"Applications/App Market.app/Icons/Application.pic",
 		"Applications/App Market.app/Localizations/Chinese.lang",
 		"Applications/App Market.app/Localizations/Russian.lang",
 		"Applications/App Market.app/Localizations/English.lang",
