Add missing lolcat translations

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -19,7 +19,7 @@
 		"Installer/Pictures/Settings.pic",
 		"Installer/Pictures/Downloading.pic",
 		"Installer/Pictures/EEPROM.pic",
-		"Installer/Pictures/Done.pic",
+		"Installer/Pictures/Done.pic"
 	},
 	localizations = {
 		"Localizations/English.lang",
@@ -42,87 +42,87 @@
 		"Localizations/Hindi.lang",
 		"Localizations/Lolcat.lang",
 		"Localizations/Portuguese.lang",
-		"Localizations/Polish.lang",
+		"Localizations/Polish.lang"
 	},
 	required = {
 		-- Libraries
 		{
 			path = "Libraries/Bit32.lua",
-			id = 1062,
+			id = 1062
 		},
 		{
 			path = "Libraries/Component.lua",
-			id = 1061,
+			id = 1061
 		},
 		{
 			path = "Libraries/Event.lua",
-			id = 1402,
+			id = 1402
 		},
 		{
 			path = "Libraries/Keyboard.lua",
-			id = 1065,
+			id = 1065
 		},
 		{
 			path = "Libraries/Filesystem.lua",
-			id = 1403,
+			id = 1403
 		},
 		{
 			path = "Libraries/Color.lua",
-			id = 92,
+			id = 92
 		},
 		{
 			path = "Libraries/Image.lua",
-			id = 73,
+			id = 73
 		},
 		{
 			path = "Libraries/Screen.lua",
-			id = 97,
+			id = 97
 		},
 		{
 			path = "Libraries/Paths.lua",
-			id = 1068,
+			id = 1068
 		},
 		{
 			path = "Libraries/Text.lua",
-			id = 1059,
+			id = 1059
 		},
 		{
 			path = "Libraries/Number.lua",
-			id = 1060,
+			id = 1060
 		},
 		{
 			path = "Libraries/GUI.lua",
-			id = 100,
+			id = 100
 		},
 		{
 			path = "Libraries/System.lua",
-			id = 108,
+			id = 108
 		},
 		{
 			path = "Libraries/Network.lua",
-			id = 253,
+			id = 253
 		},
 		{
 			path = "Libraries/Compressor.lua",
-			id = 1079,
+			id = 1079
 		},
 		{
 			path = "Libraries/SHA-256.lua",
-			id = 104,
+			id = 104
 		},
 		{
 			path = "Libraries/Internet.lua",
-			id = 1095,
+			id = 1095
 		},
 		{
 			path = "Libraries/BigLetters.lua",
-			id = 391,
+			id = 391
 		},
 		
 		-- Scripts
 		{
 			path = "OS.lua",
-			id = 106,
+			id = 106
 		},
 		
 		-- System icons
@@ -139,7 +139,7 @@
 		-- Sample
 		{
 			path = "Applications/Sample.app/Main.lua",
-			id = 1096,
+			id = 1096
 		},
 		"Applications/Sample.app/Icon.pic",
 		"Applications/Sample.app/Localizations/Chinese.lang",
@@ -161,12 +161,13 @@
 		"Applications/Sample.app/Localizations/Portuguese.lang",
 		"Applications/Sample.app/Localizations/Japanese.lang",
 		"Applications/Sample.app/Localizations/Slovak.lang",
+		"Applications/Sample.app/Localizations/Lolcat.lang",
 		"Applications/Sample.app/Localizations/Spanish.lang",
 		
 		-- App market
 		{
 			path = "Applications/App Market.app/Main.lua",
-			id = 164,
+			id = 164
 		},
 		"Applications/App Market.app/Icon.pic",
 		"Applications/App Market.app/Icons/Lua.pic",
@@ -192,12 +193,13 @@
 		"Applications/App Market.app/Localizations/Portuguese.lang",
 		"Applications/App Market.app/Localizations/Japanese.lang",
 		"Applications/App Market.app/Localizations/Slovak.lang",
+		"Applications/App Market.app/Localizations/Lolcat.lang",
 		"Applications/App Market.app/Localizations/Spanish.lang",
 		
 		-- MineCode IDE
 		{
 			path = "Applications/MineCode IDE.app/Main.lua",
-			id = 169,
+			id = 169
 		},
 		"Applications/MineCode IDE.app/Icon.pic",
 		"Applications/MineCode IDE.app/Extensions/.txt/Icon.pic",
@@ -224,12 +226,13 @@
 		"Applications/MineCode IDE.app/Localizations/Portuguese.lang",
 		"Applications/MineCode IDE.app/Localizations/Japanese.lang",
 		"Applications/MineCode IDE.app/Localizations/Slovak.lang",
+		"Applications/MineCode IDE.app/Localizations/Lolcat.lang",
 		"Applications/MineCode IDE.app/Localizations/Dutch.lang",
 		
 		-- Picture Edit
 		{
 			path = "Applications/Picture Edit.app/Main.lua",
-			id = 798,
+			id = 798
 		},
 		"Applications/Picture Edit.app/Icon.pic",
 		"Applications/Picture Edit.app/Tools/1.lua",
@@ -260,13 +263,14 @@
 		"Applications/Picture Edit.app/Localizations/Portuguese.lang",
 		"Applications/Picture Edit.app/Localizations/Japanese.lang",
 		"Applications/Picture Edit.app/Localizations/Slovak.lang",
+		"Applications/Picture Edit.app/Localizations/Lolcat.lang",
 		"Applications/Picture Edit.app/Localizations/Russian.lang",
 		"Applications/Picture Edit.app/Extensions/.pic/Icon.pic",
 		"Applications/Picture Edit.app/Extensions/.pic/Context menu.lua",
 		
 		-- Picture View
 		{
-			path = "Applications/Picture View.app/Main.lua",
+			path = "Applications/Picture View.app/Main.lua"
 		},
 		"Applications/Picture View.app/Icon.pic",
 		"Applications/Picture View.app/Icons/ArrowLeft.pic",
@@ -292,6 +296,7 @@
 		"Applications/Picture View.app/Localizations/Portuguese.lang",
 		"Applications/Picture View.app/Localizations/Japanese.lang",
 		"Applications/Picture View.app/Localizations/Slovak.lang",
+		"Applications/Picture View.app/Localizations/Lolcat.lang",
 		"Applications/Picture View.app/Localizations/Russian.lang",
 		"Applications/Picture View.app/Extensions/.pic/Icon.pic",
 		"Applications/Picture View.app/Extensions/.pic/Context menu.lua",
@@ -299,14 +304,14 @@
 		-- Finder
 		{
 			path = "Applications/Finder.app/Main.lua",
-			id = 175,
+			id = 175
 		},
 		"Applications/Finder.app/Icon.pic",
 		
 		-- Settings
 		{
 			path = "Applications/Settings.app/Main.lua",
-			id = 909,
+			id = 909
 		},
 		"Applications/Settings.app/Icon.pic",
 		"Applications/Settings.app/Modules/0_Screen/Main.lua",
@@ -348,13 +353,14 @@
 		"Applications/Settings.app/Localizations/Bulgarian.lang",
 		"Applications/Settings.app/Localizations/Portuguese.lang",
 		"Applications/Settings.app/Localizations/Slovak.lang",
+		"Applications/Settings.app/Localizations/Lolcat.lang",
 		"Applications/Settings.app/Localizations/Dutch.lang",
 		
 		-- 3D Print
 		{
 			path = "Applications/3D Print.app/Main.lua",
 			id = 859,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/3D Print.app/Icon.pic",
 		"Applications/3D Print.app/Sample.3dm",
@@ -377,6 +383,7 @@
 		"Applications/3D Print.app/Localizations/Bulgarian.lang",
 		"Applications/3D Print.app/Localizations/Portuguese.lang",
 		"Applications/3D Print.app/Localizations/Japanese.lang",
+		"Applications/3D Print.app/Localizations/Lolcat.lang",
 		"Applications/3D Print.app/Localizations/Spanish.lang",
 		"Applications/3D Print.app/Extensions/.3dm/Icon.pic",
 		"Applications/3D Print.app/Extensions/.3dm/Context menu.lua",
@@ -384,14 +391,14 @@
 		-- Console
 		{
 			path = "Applications/Console.app/Main.lua",
-			id = 1607,
+			id = 1607
 		},
-		"Applications/Console.app/Icon.pic",
+		"Applications/Console.app/Icon.pic"
 	},
 	optional = {
 		{
 			path = "Libraries/JSON.lua",
-			id = 103,
+			id = 103
 		},
 		"Libraries/MeowEngine/Main.lua",
 		"Libraries/OpenComputersGL/Main.lua",
@@ -403,7 +410,7 @@
 		{
 			path = "Applications/Multiscreen.app/Main.lua",
 			id = 1109,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Multiscreen.app/Icon.pic",
 		
@@ -411,7 +418,7 @@
 		{
 			path = "Applications/Shooting.app/Main.lua",
 			id = 1107,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Shooting.app/Icon.pic",
 		
@@ -419,7 +426,7 @@
 		{
 			path = "Applications/Reinstall OS.app/Main.lua",
 			id = 1055,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Reinstall OS.app/Icon.pic",
 		
@@ -427,7 +434,7 @@
 		{
 			path = "Applications/Lua.app/Main.lua",
 			id = 1077,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Lua.app/Icon.pic",
 		
@@ -435,7 +442,7 @@
 		{
 			path = "Applications/Weather.app/Main.lua",
 			id = 240,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Weather.app/Icon.pic",
 		"Applications/Weather.app/Sunny.pic",
@@ -463,13 +470,14 @@
 		"Applications/Weather.app/Localizations/Portuguese.lang",
 		"Applications/Weather.app/Localizations/Japanese.lang",
 		"Applications/Weather.app/Localizations/Slovak.lang",
+		"Applications/Weather.app/Localizations/Lolcat.lang",
 		"Applications/Weather.app/Localizations/Russian.lang",
 		
 		-- Calculator
 		{
 			path = "Applications/Calculator.app/Main.lua",
 			id = 1045,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Calculator.app/Icon.pic",
 		
@@ -477,7 +485,7 @@
 		{
 			path = "Applications/Christmas Tree.app/Main.lua",
 			id = 412,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Christmas Tree.app/Icon.pic",
 		
@@ -485,7 +493,7 @@
 		{
 			path = "Applications/Fuck the Rain.app/Main.lua",
 			id = 506,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Fuck the Rain.app/Icon.pic",
 		
@@ -493,7 +501,7 @@
 		{
 			path = "Applications/Graph.app/Main.lua",
 			id = 238,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Graph.app/Icon.pic",
 		
@@ -501,7 +509,7 @@
 		{
 			path = "Applications/HEX.app/Main.lua",
 			id = 248,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/HEX.app/Icon.pic",
 		
@@ -509,7 +517,7 @@
 		{
 			path = "Applications/Running String.app/Main.lua",
 			id = 410,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Running String.app/Icon.pic",
 		
@@ -517,7 +525,7 @@
 		{
 			path = "Applications/Palette.app/Main.lua",
 			id = 250,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Palette.app/Icon.pic",
 		
@@ -525,7 +533,7 @@
 		{
 			path = "Applications/HoloClock.app/Main.lua",
 			id = 559,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/HoloClock.app/Icon.pic",
 		
@@ -533,7 +541,7 @@
 		{
 			path = "Applications/Symbols.app/Main.lua",
 			id = 853,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Symbols.app/Icon.pic",
 		
@@ -541,7 +549,7 @@
 		{
 			path = "Applications/IRC.app/Main.lua",
 			id = 856,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/IRC.app/Icon.pic",
 		
@@ -549,7 +557,7 @@
 		{
 			path = "Applications/Events.app/Main.lua",
 			id = 1903,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Events.app/Icon.pic",
 		
@@ -557,7 +565,7 @@
 		{
 			path = "Applications/Nanomachines.app/Main.lua",
 			id = 938,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Nanomachines.app/Icon.pic",
 		"Applications/Nanomachines.app/Localizations/Chinese.lang",
@@ -579,13 +587,14 @@
 		"Applications/Nanomachines.app/Localizations/Portuguese.lang",
 		"Applications/Nanomachines.app/Localizations/Japanese.lang",
 		"Applications/Nanomachines.app/Localizations/Slovak.lang",
+		"Applications/Nanomachines.app/Localizations/Lolcat.lang",
 		"Applications/Nanomachines.app/Localizations/Dutch.lang",
 		
 		-- VK
 		{
 			path = "Applications/VK.app/Main.lua",
 			id = 952,
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/VK.app/Icon.pic",
 		"Applications/VK.app/Localizations/English.lang",
@@ -607,6 +616,7 @@
 		"Applications/VK.app/Localizations/Portuguese.lang",
 		"Applications/VK.app/Localizations/Japanese.lang",
 		"Applications/VK.app/Localizations/Slovak.lang",
+		"Applications/VK.app/Localizations/Lolcat.lang",
 		"Applications/VK.app/Localizations/Dutch.lang",
 		"Applications/VK.app/Icons/Likes.pic",
 		"Applications/VK.app/Icons/Reposts.pic",
@@ -619,7 +629,7 @@
 		-- Calendar
 		{
 			path = "Applications/Calendar.app/Main.lua",
-			shortcut = true,
+			shortcut = true
 		},
 		"Applications/Calendar.app/Icon.pic",
 		"Applications/Calendar.app/Icons/ArrowLeft.pic",
@@ -643,7 +653,8 @@
 		"Applications/Calendar.app/Localizations/Portuguese.lang",
 		"Applications/Calendar.app/Localizations/Japanese.lang",
 		"Applications/Calendar.app/Localizations/Slovak.lang",
-		"Applications/Calendar.app/Localizations/Russian.lang",
+		"Applications/Calendar.app/Localizations/Lolcat.lang",
+		"Applications/Calendar.app/Localizations/Russian.lang"
 	},
 	wallpapers = {
 		"Pictures/AhsokaTano.pic",
@@ -654,7 +665,7 @@
 		"Pictures/Nettle.pic",
 		"Pictures/Raspberry.pic",
 		"Pictures/Road.pic",
-		"Pictures/Space.pic",
+		"Pictures/Space.pic"
 	},
 	screensavers = {
 		"Screensavers/Space.lua",
@@ -663,6 +674,6 @@
 		"Screensavers/Clock.lua",
 		"Screensavers/Lines.lua",
 		"Screensavers/XCOM.lua",
-		"Screensavers/NyanCat.lua",
-	},
+		"Screensavers/NyanCat.lua"
+	}
 }
