Подготовил пушки к новой системе стрельбы
Добавил скорострельность и авто/одиноч выстрелы

--- a/Applications/RayWalk.app/Weapons/Weapons.cfg
+++ b/Applications/RayWalk.app/Weapons/Weapons.cfg
@@ -8,6 +8,8 @@
 			x = -1,
 			y = -4,
 		},
+		fireTime = 3,
+		isAuto = 0,
 		crosshairTexture = "CrosshairTextures/Default.pic",
 	},
 	{
@@ -19,6 +21,8 @@
 			x = 1,
 			y = -1,
 		},
+		fireTime = 2,
+		isAuto = 1,
 		crosshairTexture = "CrosshairTextures/Half.pic",
 	},
 	{
@@ -31,6 +35,8 @@
 			y = 1,
 		},
 		crosshairTexture = "CrosshairTextures/Angled.pic",
+		fireTime = 5,
+		isAuto = 0,
 	},
 	{
 		name = "Plasmer",
@@ -41,6 +47,8 @@
 			x = 1,
 			y = -2,
 		},
+		fireTime = 3,
+		isAuto = 1,
 		crosshairTexture = "CrosshairTextures/Dotted.pic",
 	},
 }
