Уменьшил разрешение в RayEngine.cfg
Иначе люто тормозит

--- a/Applications/RayWalk.app/RayEngine.cfg
+++ b/Applications/RayWalk.app/RayEngine.cfg
@@ -1,28 +1,28 @@
 {
+  tileWidth = 32,
   screenResolution = {
-    height = 50,
-    width = 160
+    width = 110,
+    height = 45
   },
   shadingTransparencyMap = {
-    [12] = 0.50196078431373,
-    [6] = 1,
-    [13] = 0.4,
     [1] = 0.2,
+    [2] = 0.4,
     [3] = 0.6,
+    [4] = 0.8,
+    [5] = 1,
+    [6] = 1,
     [7] = 1,
     [8] = 0.8,
-    [4] = 0.8,
     [9] = 0.8,
-    [14] = 0.30196078431373,
-    [2] = 0.4,
-    [5] = 1,
+    [10] = 0.70196078431373,
     [11] = 0.6,
-    [10] = 0.70196078431373
+    [12] = 0.50196078431373,
+    [13] = 0.4,
+    [14] = 0.30196078431373
   },
-  shadingDistance = 500,
-  shadingCascades = 8,
+  raycastQuality = 4.8953488372093,
   useSimpleRenderer = false,
-  tileWidth = 32,
-  raycastQuality = 6.4,
-  drawDistance = 1000
+  shadingCascades = 8,
+  drawDistance = 1000,
+  shadingDistance = 500
 }
