Ну а кто мне запретит

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -646,7 +646,32 @@
 		"Applications/Calendar.app/Localizations/Japanese.lang",
 		"Applications/Calendar.app/Localizations/Slovak.lang",
 		"Applications/Calendar.app/Localizations/Lolcat.lang",
-		"Applications/Calendar.app/Localizations/Russian.lang"
+		"Applications/Calendar.app/Localizations/Russian.lang",
+
+		-- Pioneer
+		{
+			path = "Applications/Pioneer.app/Main.lua",
+			shortcut = true
+		},
+		"Applications/Pioneer.app/Icon.pic",
+		"Applications/Calendar.app/Images/Background.pic",
+		"Applications/Calendar.app/Images/CueOff.pic",
+		"Applications/Calendar.app/Images/CueOn.pic",
+		"Applications/Calendar.app/Images/PlayOff.pic",
+		"Applications/Calendar.app/Images/PlayOn.pic",
+		"Applications/Calendar.app/Images/SpeedSlider.pic",
+		"Applications/Calendar.app/Images/Jog1.pic",
+		"Applications/Calendar.app/Images/Jog2.pic",
+		"Applications/Calendar.app/Images/Jog3.pic",
+		"Applications/Calendar.app/Images/Jog4.pic",
+		"Applications/Calendar.app/Images/Jog5.pic",
+		"Applications/Calendar.app/Images/Jog6.pic",
+		"Applications/Calendar.app/Images/Jog7.pic",
+		"Applications/Calendar.app/Images/Jog8.pic",
+		"Applications/Calendar.app/Images/Jog9.pic",
+		"Applications/Calendar.app/Images/Jog10.pic",
+		"Applications/Calendar.app/Images/Jog11.pic",
+		"Applications/Calendar.app/Images/Jog12.pic"
 	},
 	wallpapers = {
 		"Pictures/AhsokaTano.pic",
