--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -654,24 +654,24 @@
 			shortcut = true
 		},
 		"Applications/Pioneer.app/Icon.pic",
-		"Applications/Calendar.app/Images/Background.pic",
-		"Applications/Calendar.app/Images/CueOff.pic",
-		"Applications/Calendar.app/Images/CueOn.pic",
-		"Applications/Calendar.app/Images/PlayOff.pic",
-		"Applications/Calendar.app/Images/PlayOn.pic",
-		"Applications/Calendar.app/Images/SpeedSlider.pic",
-		"Applications/Calendar.app/Images/Jog1.pic",
-		"Applications/Calendar.app/Images/Jog2.pic",
-		"Applications/Calendar.app/Images/Jog3.pic",
-		"Applications/Calendar.app/Images/Jog4.pic",
-		"Applications/Calendar.app/Images/Jog5.pic",
-		"Applications/Calendar.app/Images/Jog6.pic",
-		"Applications/Calendar.app/Images/Jog7.pic",
-		"Applications/Calendar.app/Images/Jog8.pic",
-		"Applications/Calendar.app/Images/Jog9.pic",
-		"Applications/Calendar.app/Images/Jog10.pic",
-		"Applications/Calendar.app/Images/Jog11.pic",
-		"Applications/Calendar.app/Images/Jog12.pic"
+		"Applications/Pioneer.app/Images/Background.pic",
+		"Applications/Pioneer.app/Images/CueOff.pic",
+		"Applications/Pioneer.app/Images/CueOn.pic",
+		"Applications/Pioneer.app/Images/PlayOff.pic",
+		"Applications/Pioneer.app/Images/PlayOn.pic",
+		"Applications/Pioneer.app/Images/SpeedSlider.pic",
+		"Applications/Pioneer.app/Images/Jog1.pic",
+		"Applications/Pioneer.app/Images/Jog2.pic",
+		"Applications/Pioneer.app/Images/Jog3.pic",
+		"Applications/Pioneer.app/Images/Jog4.pic",
+		"Applications/Pioneer.app/Images/Jog5.pic",
+		"Applications/Pioneer.app/Images/Jog6.pic",
+		"Applications/Pioneer.app/Images/Jog7.pic",
+		"Applications/Pioneer.app/Images/Jog8.pic",
+		"Applications/Pioneer.app/Images/Jog9.pic",
+		"Applications/Pioneer.app/Images/Jog10.pic",
+		"Applications/Pioneer.app/Images/Jog11.pic",
+		"Applications/Pioneer.app/Images/Jog12.pic"
 	},
 	wallpapers = {
 		"Pictures/AhsokaTano.pic",
