Какие же ОХУЕННЫЕ крутилочки, ммммммм

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -671,7 +671,15 @@
 		"Applications/Pioneer.app/Images/Jog9.pic",
 		"Applications/Pioneer.app/Images/Jog10.pic",
 		"Applications/Pioneer.app/Images/Jog11.pic",
-		"Applications/Pioneer.app/Images/Jog12.pic"
+		"Applications/Pioneer.app/Images/Jog12.pic",
+		"Applications/Pioneer.app/Images/Knob1.pic",
+		"Applications/Pioneer.app/Images/Knob2.pic",
+		"Applications/Pioneer.app/Images/Knob3.pic",
+		"Applications/Pioneer.app/Images/Knob4.pic",
+		"Applications/Pioneer.app/Images/Knob5.pic",
+		"Applications/Pioneer.app/Images/Knob6.pic",
+		"Applications/Pioneer.app/Images/Knob7.pic",
+		"Applications/Pioneer.app/Images/Knob8.pic"
 	},
 	wallpapers = {
 		"Pictures/AhsokaTano.pic",
