--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -659,7 +659,7 @@
 		"Applications/Pioneer.app/Images/CueOn.pic",
 		"Applications/Pioneer.app/Images/PlayOff.pic",
 		"Applications/Pioneer.app/Images/PlayOn.pic",
-		"Applications/Pioneer.app/Images/SpeedSlider.pic",
+		"Applications/Pioneer.app/Images/TempoSlider.pic",
 		"Applications/Pioneer.app/Images/Jog1.pic",
 		"Applications/Pioneer.app/Images/Jog2.pic",
 		"Applications/Pioneer.app/Images/Jog3.pic",
