Ну че, трайнем живые обои

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -690,7 +690,8 @@
 		"Pictures/Nettle.pic",
 		"Pictures/Raspberry.pic",
 		"Pictures/Road.pic",
-		"Pictures/Space.pic"
+		"Pictures/Space.pic",
+		"Pictures/Flight.lua"
 	},
 	screensavers = {
 		"Screensavers/Space.lua",
