--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -691,7 +691,8 @@
 		"Pictures/Raspberry.pic",
 		"Pictures/Road.pic",
 		"Pictures/Space.pic",
-		"Pictures/Flight.lua"
+		"Pictures/Flight.lua",
+		"Pictures/Logic.pic"
 	},
 	screensavers = {
 		"Screensavers/Space.lua",
