Фиксанул уёбищные цвета

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -422,15 +422,7 @@
 		},
 		"Applications/Shooting.app/Icon.pic",
 		
-		-- Reinstall OS
-		{
-			path = "Applications/Reinstall OS.app/Main.lua",
-			id = 1055,
-			shortcut = true
-		},
-		"Applications/Reinstall OS.app/Icon.pic",
-		
-		-- Lua interpreter
+		-- Lua
 		{
 			path = "Applications/Lua.app/Main.lua",
 			id = 1077,
