Renamed /Pictures to /Wallpapers and all corresponding constants in the system

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -674,17 +674,20 @@
 		"Applications/Pioneer.app/Images/Knob8.pic"
 	},
 	wallpapers = {
-		"Pictures/AhsokaTano.pic",
-		"Pictures/Block.pic",
-		"Pictures/Ciri.pic",
-		"Pictures/Girl.pic",
-		"Pictures/Mystery.pic",
-		"Pictures/Nettle.pic",
-		"Pictures/Raspberry.pic",
-		"Pictures/Road.pic",
-		"Pictures/Space.pic",
-		"Pictures/Flight.lua",
-		"Pictures/Logic.pic"
+		-- Pictures
+		"Wallpapers/AhsokaTano.pic",
+		"Wallpapers/Block.pic",
+		"Wallpapers/Ciri.pic",
+		"Wallpapers/Girl.pic",
+		"Wallpapers/Mystery.pic",
+		"Wallpapers/Nettle.pic",
+		"Wallpapers/Raspberry.pic",
+		"Wallpapers/Road.pic",
+		"Wallpapers/Space.pic",
+		"Wallpapers/Logic.pic",
+
+		-- Scripts
+		"Wallpapers/Flight.lua"
 	},
 	screensavers = {
 		"Screensavers/Space.lua",
