--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -678,7 +678,7 @@
 
 		"Wallpapers/Solid color.wlp/Main.lua",
 
-		"Wallpapers/Stars.wlp/Main.lua"
+		"Wallpapers/Stars.wlp/Main.lua",
 
 		"Wallpapers/Static picture.wlp/Main.lua",
 		"Wallpapers/Static picture.wlp/Pictures/Ciri.pic",
