--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -671,14 +671,16 @@
 		"Applications/Pioneer.app/Images/Knob5.pic",
 		"Applications/Pioneer.app/Images/Knob6.pic",
 		"Applications/Pioneer.app/Images/Knob7.pic",
-		"Applications/Pioneer.app/Images/Knob8.pic"
+		"Applications/Pioneer.app/Images/Knob8.pic",
+
+		-- Required wallpapers
+		"Wallpapers/Solid color.wlp/Main.lua",
+		"Wallpapers/Stars.wlp/Main.lua"
 	},
+
+	-- Additional wallpapers
 	wallpapers = {
 		"Wallpapers/Lines.wlp/Main.lua",
-
-		"Wallpapers/Solid color.wlp/Main.lua",
-
-		"Wallpapers/Stars.wlp/Main.lua",
 
 		"Wallpapers/Static picture.wlp/Main.lua",
 		"Wallpapers/Static picture.wlp/Pictures/Ciri.pic",
