--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -671,15 +671,15 @@
 		"Applications/Pioneer.app/Images/Knob5.pic",
 		"Applications/Pioneer.app/Images/Knob6.pic",
 		"Applications/Pioneer.app/Images/Knob7.pic",
-		"Applications/Pioneer.app/Images/Knob8.pic",
-
-		-- Required wallpapers
-		"Wallpapers/Solid color.wlp/Main.lua",
-		"Wallpapers/Stars.wlp/Main.lua"
+		"Applications/Pioneer.app/Images/Knob8.pic"
 	},
 
-	-- Additional wallpapers
-	wallpapers = {
+	requiredWallpapers = {
+		"Wallpapers/Solid color.wlp/Main.lua",
+		"Wallpapers/Stars.wlp/Main.lua"
+	}
+
+	optionalWallpapers = {
 		"Wallpapers/Lines.wlp/Main.lua",
 
 		"Wallpapers/Static picture.wlp/Main.lua",
