--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -681,6 +681,7 @@
 
 	optionalWallpapers = {
 		"Wallpapers/Lines.wlp/Main.lua",
+		"Wallpapers/Rain.wlp/Main.lua",
 
 		"Wallpapers/Static picture.wlp/Main.lua",
 		"Wallpapers/Static picture.wlp/Pictures/Ciri.pic",
