--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -683,6 +683,7 @@
 		"Wallpapers/Lines.wlp/Main.lua",
 		"Wallpapers/Rain.wlp/Main.lua",
 		"Wallpapers/Snow.wlp/Main.lua",
+		"Wallpapers/Sphere.wlp/Main.lua",
 
 		"Wallpapers/Static picture.wlp/Main.lua",
 		"Wallpapers/Static picture.wlp/Pictures/Ciri.pic",
