--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -118,6 +118,10 @@
 			path = "Libraries/BigLetters.lua",
 			id = 391
 		},
+		{
+			path = "Libraries/FTP.lua",
+			id = 2529
+		}
 		
 		-- Scripts
 		{
